WSRF-1239: Update banner's alt text and add slash to the URL

--- a/_includes/template/bodycontents.html
+++ b/_includes/template/bodycontents.html
@@ -170,7 +170,7 @@
         <div id="optimize-bottom">
             <a href="{{ site.accountsignup }}">
                 <img
-                    title="Create your Tiny Account. Get the most out of TinyMCE with a 14-day free trial of all premium plugins."
+                    title="Get a free rich text editor API key"
                     src="{{ site.baseurl }}/images/optimize/account/mini/primary.gif"
                     srcset="{{ site.baseurl }}/images/optimize/account/mini/primary.gif 1x, {{ site.baseurl }}/images/optimize/account/mini/primary@2x.gif 2x"
                 />
