DOC-2190: update LTS message, increase font size 16px.

--- a/_includes/template/bodycontents.html
+++ b/_includes/template/bodycontents.html
@@ -88,6 +88,7 @@
     .notification-orange-bg {
         background-color: orange;
         color: #595959;
+        font-size: 16px;
         padding: 10px;
         width: 850px;
         margin-bottom: 10px;
@@ -192,7 +193,7 @@
 
     <main class="modern-main-container">
         <div>
-            <p class="notification-orange-bg"><strong>Note</strong>: placeholder for message</p>
+            <p class="notification-orange-bg"><strong>NOTE:</strong> TinyMCE 5 reached End of Support in April 2023. No more bug fixes, security updates, or new features will be introduced to TinyMCE 5. We recommend you <strong><a href="https://www.tiny.cloud/docs/tinymce/6/upgrading/#upgrading-to-the-latest-version-of-tinymce-6">upgrade to TinyMCE 6</a></strong> or consider <strong><a href="https://www.tiny.cloud/long-term-support/">TinyMCE 5 Long Term Support (LTS)</a></strong> if you need more time.</p>
         </div>
         <div class="heading modern-heading">
             <h1 class="light">{{ page.title }}</h1>
