DOC-2343: updating staging URL links and sidebar navigation dropdown.

--- a/_includes/template/bodycontents.html
+++ b/_includes/template/bodycontents.html
@@ -141,10 +141,11 @@
                 TinyMCE v5
                 <div class="dropdown-arrow"></div>
                 <div class="dropdown-options">
-                    <a class="link-gelato" href="/docs/tinymce/6/">TinyMCE v6</a>
-                    <a class="link-gelato" href="/docs/">TinyMCE v5</a>
-                    <a class="link-gelato" href="/docs-4x/">TinyMCE v4</a>
-                    <a class="link-gelato" href="/docs-3x/">TinyMCE v3</a>
+                    <a class="link-gelato" href="/docs/tinymce/6/">TinyMCE 7</a>
+                    <a class="link-gelato" href="/docs/tinymce/6/">TinyMCE 6</a>
+                    <a class="link-gelato" href="/docs/tinymce/5/">TinyMCE 5</a>
+                    <a class="link-gelato" href="/docs-4x/">TinyMCE 4</a>
+                    <a class="link-gelato" href="/docs-3x/">TinyMCE 3</a>
                 </div>
             </div>
         </div>
@@ -193,7 +194,7 @@
 
     <main class="modern-main-container">
         <div>
-            <p class="notification-orange-bg"><strong>NOTE:</strong> TinyMCE 5 reached End of Support in April 2023. No more bug fixes, security updates, or new features will be introduced to TinyMCE 5. We recommend you <strong><a href="https://www.tiny.cloud/docs/tinymce/6/upgrading/#upgrading-to-the-latest-version-of-tinymce-6">upgrade to TinyMCE 6</a></strong> or consider <strong><a href="https://www.tiny.cloud/long-term-support/">TinyMCE 5 Long Term Support (LTS)</a></strong> if you need more time.</p>
+            <p class="notification-orange-bg"><strong>NOTE:</strong> TinyMCE 5 reached End of Support in April 2023. No more bug fixes, security updates, or new features will be introduced to TinyMCE 5. We recommend you <strong><a href="https://www.tiny.cloud/docs/tinymce/7/upgrading/#upgrading-to-the-latest-version-of-tinymce-6">upgrade to TinyMCE 7</a></strong> or consider <strong><a href="https://www.tiny.cloud/long-term-support/">TinyMCE 5 Long Term Support (LTS)</a></strong> if you need more time.</p>
         </div>
         <div class="heading modern-heading">
             <h1 class="light">{{ page.title }}</h1>
